envoy.yaml
admin:
  address:
    socket_address: {address: 127.0.0.1, port_value: 9901}

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            # A custom response header is added for e2e testing purposes. A local response, triggered by an interruption,
            # has to allow custom added headers like this. See https://github.com/corazawaf/coraza-proxy-wasm/pull/172
            response_headers_to_add:
            - header:
                key: "custom_header"
                value: "custom_value"
            virtual_hosts:
            - name: local_route
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: some_service
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "coraza-filter"
                root_id: ""
                configuration:
                  "@type": "type.googleapis.com/google.protobuf.StringValue"
                  # See https://github.com/corazawaf/coraza/blob/main/http/e2e/cmd/httpe2e/main.go#L22 for e2e Coraza directives
                  value: |
                    {
                        "directives_map": {
                            "default": [
                                "Include @demo-conf",
                                "SecDebugLogLevel 9",
                                "SecRuleEngine On",
                                "Include @crs-setup-conf",
                                "Include @owasp_crs/*.conf"
                            ]
                        },
                        "default_directives": "default"
                    }
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  vm_id: "my_vm_id"
                  code:
                    local:
                      filename: "/coraza-proxy.wasm"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: some_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 1234
